Minor fixes, fixed the navbar font differences and layout issues

--- a/frontend/src/pages/CustomizeAvatar.css
+++ b/frontend/src/pages/CustomizeAvatar.css
@@ -47,6 +47,10 @@
   padding: 2rem;
 }
 
+.outfit-img:hover{
+  transform: scale(1.05);
+}
+
 
 .outfit-row {
   display: flex;
